--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "mersenne-twister": "^1.1.0",
     "nist-randomness-test-suite": "0.0.7",
     "rimraf": "^3.0.0"
   }
